feat: delete product endpoint
